--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+.game-area {
+  position: relative;
+  margin: 15px auto;
+  width: 500px;
+  height: 500px;
+  border: 2px solid #000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.snake-dot {
+  position: absolute;
+  width: 2%;
+  height: 2%;
+  background-color: #000;
+  border: 1px solid white;
+  border-radius: 7px;
+  z-index: 2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.snake-food {
+  position: absolute;
+  width: 2%;
+  height: 2%;
+  background: red;
+  border: 1px solid #fff;
+  border-radius: 7px;
+  z-index: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.score {
+  margin-top: 15px;
+  font-size: 25px;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  width: 70px;
+  margin: 0 10px;
+  padding: 5px;
+  color: #fff;
+  background-color: rgb(14, 19, 9);
+  border-radius: 7px;
 }
