--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
   background-color: rgb(14, 19, 9);
   border-radius: 7px;
 }
+
+@media(max-width:416px) {
+  .game-area{
+    width: 300px;
+    height: 300px;
+    /* background-color: rgb(85, 105, 98); */
+  }
+}
