--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,28 @@
 .game-area {
   position: relative;
   margin: 15px auto;
-  width: 500px;
-  height: 500px;
-  border: 2px solid #000;
+  width: 400px;
+  height: 350px;
+  border: 2px solid lightsteelblue;
+  background-color: rgb(60, 67, 75);
 }
 
 .snake-dot {
   position: absolute;
-  width: 2%;
-  height: 2%;
-  background-color: #000;
-  border: 1px solid white;
+  width: 3%;
+  height: 3%;
+  background-color: yellow;
+  border: 1px solid black;
   border-radius: 7px;
   z-index: 2;
 }
 
 .snake-food {
   position: absolute;
-  width: 2%;
-  height: 2%;
+  width: 3%;
+  height: 3%;
   background: red;
-  border: 1px solid #fff;
+  border: 1px solid red;
   border-radius: 7px;
   z-index: 1;
 }
@@ -47,10 +48,30 @@
   border-radius: 7px;
 }
 
+.navigation-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+.left,.right {
+  width: 60px;
+  margin: 10px;
+}
+
+.button {
+  padding: 9px;
+  border-radius: 10px;
+  border: 1px solid red;
+  font-weight: bold;
+  color: white;
+  background-color: rgb(199, 18, 28);
+}
+
 @media(max-width:416px) {
   .game-area{
-    width: 300px;
-    height: 300px;
-    /* background-color: rgb(85, 105, 98); */
+    width: 70vw;
+    height: 30vh;
   }
 }
