--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@
 }
 
 .button {
+  margin: 10px;
   padding: 9px;
   border-radius: 10px;
   border: 1px solid red;
@@ -72,6 +73,6 @@
 @media(max-width:416px) {
   .game-area{
     width: 80vw;
-    height: 45vh;
+    height: 40vh;
   }
 }
