--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .game-area {
   position: relative;
-  margin: 15px auto;
+  margin: 10px auto;
   width: 400px;
   height: 350px;
   border: 2px solid lightsteelblue;
@@ -22,7 +22,7 @@
   width: 3%;
   height: 3%;
   background: red;
-  border: 1px solid red;
+  border: 1px solid rgb(60, 67, 75);
   border-radius: 7px;
   z-index: 1;
 }
@@ -34,15 +34,17 @@
 }
 
 .score {
-  margin-top: 15px;
+  margin-top: 10px;
   font-size: 25px;
-  font-weight: 600;
+  font-weight: 500;
+  color: rgb(60, 67, 75);
 }
 
 .btn {
   width: 70px;
-  margin: 20px 10px;
-  padding: 5px;
+  margin: 7px 10px;
+  padding: 6px;
+  font-weight: 600;
   color: #fff;
   background-color: rgb(14, 19, 9);
   border-radius: 7px;
@@ -52,7 +54,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px;
 }
 
 .left,.right {
@@ -61,8 +62,7 @@
 }
 
 .button {
-  margin: 10px;
-  padding: 9px;
+  padding: 8px;
   border-radius: 10px;
   border: 1px solid red;
   font-weight: bold;
@@ -70,9 +70,21 @@
   background-color: rgb(199, 18, 28);
 }
 
+.game-over {
+  font-size: large;
+  font-weight: 700;
+  color: red;
+}
+
 @media(max-width:416px) {
   .game-area{
     width: 80vw;
     height: 40vh;
+  }
+  .navigation-button {
+    margin: 10px;
+  }
+  .button {
+    margin: 10px;
   }
 }
